<resources>
    <string name="app_name">vpp-android</string>
    <string name="work_version">version 0.1</string>
    <string name="build_version">version 0.1</string>
    <string name="production_version">version 1.0</string>

    <!--Public strings-->
    <string name="sign_in">Вход</string>
    <string name="input_data">Ввод данных</string>
    <string name="reports">Отчёты</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="submit">Отправить</string>
    <string name="view">Просмотреть</string>

    <!--Hint strings InputData-->
    <string name="consumption_rate">
        Норма расхода на 1 человека в месяц кг/месяц
    </string>
    <string name="produced">
        Произведено, тонна
    </string>
    <string name="stock_by_population">
        Запасы в целом по населению, тонна
    </string>
    <string name="outlet_stock">
        Запасы в торговых точках, тонна
    </string>
    <string name="price">
        Цена, кг/сом
    </string>
    <string name="about_app">Информация о пользователе</string>
    <string name="app_settings">Настройки</string>
    <string name="app_menu">Меню</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="oauth_number_text_view">Введите телефонный номер</string>
    <string name="country_code">996</string>
    <string name="card_view_date">01.01.2021</string>
    <string name="card_view_region">Область</string>
    <string name="no_data">нет данных</string>
    <string name="product_name">Название продукта</string>
    <string name="area_consumption_rate">Норма расхода по региону</string>
    <string name="residual_volume">Остаточный объем</string>
    <string name="created_at">дата создания</string>
    <string name="availability_in_month">Доступно в месяц</string>
    //Data for spinner in first_questionnaire
    <string name="quest_one_third_frag_enterp_stat1">Зарегистрированное предприятие (производство) 11</string>
    <string name="quest_one_third_frag_enterp_stat2">Среднее (малое) предприятие (работающее по патенту) 12</string>
    <string name="quest_one_third_frag_enterp_stat3">Производитель сельскохозяйственной продукции 13</string>

    //Data for spinner in second_questionnaire
    <string name="quest_two_third_frag_outlet_stat1">Продовольственный базар/рынок</string>
    <string name="quest_two_third_frag_outlet_stat2">Продовольственный магазин (супермаркет)</string>
    <string name="quest_two_third_frag_outlet_stat3">Склад по хранению пишевой продукции</string>
    <string name="quest_two_third_frag_outlet_stat4">КИОСК (ларек) </string>


    <!--Items strings-->
    <!--    <string-array name="Products">-->
    <!--        <item>Пшеница</item>-->
    <!--        <item>Пшеничная мука</item>-->
    <!--        <item>Макаронные изделия</item>-->
    <!--        <item>Молоко и молочные изделия</item>-->
    <!--        <item>Говядина</item>-->
    <!--        <item>Конина</item>-->
    <!--        <item>Баранина(козлятина)</item>-->
    <!--        <item>Свинина</item>-->
    <!--        <item>Мясо домашней птицы</item>-->
    <!--        <item>Растительное масло</item>-->
    <!--        <item>Сахар</item>-->
    <!--        <item>Соль</item>-->
    <!--        <item>Яйца, тыс. штук</item>-->
    <!--        <item>Рис</item>-->
    <!--        <item>Картофель</item>-->
    <!--    </string-array>-->
</resources>