<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/product_item_dialog__name_of_product"
        android:text="@string/product_name"
        style="@style/product_item_dialog_main_header" />

    <TextView
        style="@style/product_item_dialog__header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumption_rate" />

    <TextView
        android:id="@+id/product_item_dialog__consumption_rate"
        style="@style/product_item_dialog__base_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/product_item_dialog__header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_consumption_rate" />

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__area_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produced"/>

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__produced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__header_text"
        android:text="@string/stock_by_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__stock_by_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__header_text"
        android:text="@string/outlet_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__outlet_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__header_text"
        android:text="@string/residual_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__residual_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/product_item_dialog__header_text"
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/product_item_dialog__header_text"
        android:text="@string/availability_in_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/product_item_dialog__availability_in_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/product_item_dialog__base_text"/>

    <TextView
        style="@style/product_item_dialog__header_text"
        android:text="@string/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/product_item_dialog__base_text"
        android:id="@+id/product_item_dialog__created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>