<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/common_google_signin_btn_text_light_pressed"
        app:fabAlignmentMode="end"
        app:menu="@menu/app_bar_menu"
        app:navigationIcon="@drawable/ic_menu"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/input_data_btn"
        android:tooltipText="@string/input_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        app:backgroundTint="@color/cyan"
        app:maxImageSize="35dp"
        app:layout_anchor="@id/bottomBar"
        />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:text="@string/work_version"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10sp"/>

    <Button android:id="@+id/view_data"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/view"
        android:layout_centerInParent="true"/>

    <Button android:id="@+id/reports_btn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/reports"
        android:layout_centerInParent="true"
        android:layout_below="@+id/view_data"/>

    <Button android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in"/>
</RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>