<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputData">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView android:id="@+id/data_username"
        android:text="Имя пользователя"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/input_data_spinner"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:layout_height="50dp"
        android:layout_below="@id/data_username"/>

    <EditText android:id="@+id/consumption_rate"
        android:inputType="numberDecimal"
        android:hint="@string/consumption_rate"
        android:autofillHints="@string/consumption_rate"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/input_data_spinner"/>

    <EditText android:id="@+id/produced"
        android:inputType="numberDecimal"
        android:layout_centerHorizontal="true"
        android:hint="@string/produced"
        android:autofillHints="@string/produced"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/consumption_rate"/>

    <EditText android:id="@+id/stock_by_population"
        android:inputType="numberDecimal"
        android:layout_centerHorizontal="true"
        android:hint="@string/stock_by_population"
        android:autofillHints="@string/stock_by_population"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/produced"/>

    <EditText android:id="@+id/outlet_stock"
        android:inputType="numberDecimal"
        android:layout_centerHorizontal="true"
        android:hint="@string/outlet_stock"
        android:autofillHints="@string/outlet_stock"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/stock_by_population"/>

    <EditText android:id="@+id/price"
        android:inputType="numberDecimal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/price"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/outlet_stock"
        android:autofillHints="@string/price" />

    <Button android:id="@+id/submit_costs"
        android:layout_width="140dp"
        android:textSize="12sp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:layout_alignStart="@id/price"
        android:layout_marginTop="10dp"
        android:layout_below="@id/price"
        android:layout_marginBottom="20dp"/>
    <Button android:id="@+id/view_report"
        android:layout_width="140dp"
        android:textSize="12sp"
        android:layout_height="50dp"
        android:text="@string/view"
        android:layout_alignEnd="@id/price"
        android:layout_marginTop="10dp"
        android:layout_below="@id/price"
        android:layout_marginBottom="20dp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>