<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_in_background"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/sign_in_login"
        android:layout_width="350dp"
        android:textSize="26sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/login"
        android:inputType="text"
        android:textAlignment="textStart"/>

    <EditText
        android:id="@+id/sing_in_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_login"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:textAlignment="textStart"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"/>

    <Button android:id="@+id/sign_in_btn"
        android:text="@string/sign_in"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:layout_below="@+id/sing_in_password"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        />

</RelativeLayout>