<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/cyan"
    app:cardCornerRadius="12dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_view__product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/card_view__region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_view_region"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/card_view__date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_date"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>